[tool.poetry]
name = "practice"
version = "0.0.1"
description = ""
authors = ["CookieBox26 <cookie-box@cookie-box.info>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.x"
numpy = "1.25.1"
torch = { url = "https://download.pytorch.org/whl/cu118/torch-2.0.1%2Bcu118-cp310-cp310-win_amd64.whl" }

[tool.poetry.group.test.dependencies]
pytest = "7.4.0"

[[tool.poetry.source]]
name = "pytorch_cu118"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
